--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "_comment": "===== MODEL CONFIGURATION =====",
-  "model_dir": "models/a_very_robust_model",
+  "model_dir": "/Users/BenjaminDanek/PycharmProjects/DAAA-designinformatics/DAAA-designinformatics-master/mnist_cnn_keras_example.py",
 
   "_comment": "===== TRAINING CONFIGURATION =====",
   "random_seed": 4557077,
